--- a/dotNet5782_0545_8228/PL/App.xaml
+++ b/dotNet5782_0545_8228/PL/App.xaml
@@ -5,12 +5,12 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <LinearGradientBrush x:Key="ButtonBrush" EndPoint="0.5,0"  StartPoint="0.5,1">
-            <GradientStop Color="DarkGray" Offset="0"/>
-            <GradientStop Color="LightGray" Offset=".5"/>
+            <GradientStop Color="#757f9a" Offset="0"/>
+            <GradientStop Color="#d7dde8" Offset=".5"/>
         </LinearGradientBrush>
-        <LinearGradientBrush x:Key="WindowBrush" EndPoint="0.5,1" StartPoint="0.5,0">
-            <GradientStop Color="LightGray" Offset="0"/>
-            <GradientStop Color="DarkCyan" Offset="1"/>
+        <LinearGradientBrush x:Key="WindowBrush" EndPoint="0,0.5" StartPoint="1,0.5">
+            <GradientStop Color="#4ca1af" Offset="0"/>
+            <GradientStop Color="#2c3e50" Offset="1"/>
         </LinearGradientBrush>
         <LinearGradientBrush x:Key="AddButtonBrush" EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="LightBlue" Offset="0"/>
@@ -24,6 +24,7 @@
             <GradientStop Color="LightGreen" Offset="0"/>
             <GradientStop Color="DarkGreen" Offset="1"/>
         </LinearGradientBrush>
+        
         
 
 
