--- a/dotNet5782_0545_8228/PL/CustomerViewWindow.xaml
+++ b/dotNet5782_0545_8228/PL/CustomerViewWindow.xaml
@@ -5,58 +5,58 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="CustomerViewWindow" Height="500" Width="600">
+        Title="CustomerViewWindow" Height="640" Width="800" WindowStartupLocation="CenterScreen">
     <Grid Background="{StaticResource WindowBrush}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50*"/>
-            <RowDefinition Height="300*"/>
-        </Grid.RowDefinitions>
 
 
-        <Grid Margin="0,63,0,6" Grid.RowSpan="2">
+        <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="400*"/>
-                <ColumnDefinition Width="400*"/>
+                <ColumnDefinition Width="320*"/>
+                <ColumnDefinition Width="320*"/>
             </Grid.ColumnDefinitions>
+            <Border Name="AddBorder">
+                <Grid>
+                    <TextBox Name="ModelEntry" 
+                         HorizontalAlignment="Left" 
+                         Text="Enter Model" 
+                         TextWrapping="Wrap" 
+                         VerticalAlignment="Top" 
+                         Width="126" 
+                         RenderTransformOrigin="0.5,0.5" 
+                         Margin="237,118,0,0" 
+                         Visibility="Hidden"/>
+                    <Button Name="AddDrone" 
+                        Content="Add Drone" 
+                        HorizontalAlignment="Left"  
+                        VerticalAlignment="Top" Width="136" 
+                        Click="AddDrone_Click" 
+                        Height="20" Margin="232,237,0,0" 
+                        FontFamily="Tw Cen MT" FontSize="12"
+                        Visibility="Hidden"/>
+                    <ComboBox Name="WeightSelection" HorizontalAlignment="Left" Margin="232,195,0,0" VerticalAlignment="Top" Width="136" Visibility="Hidden" />
+                    <ComboBox Name="StationSelection" HorizontalAlignment="Left" VerticalAlignment="Top" Width="136" Margin="232,155,0,0" Visibility="Hidden"/>
+                </Grid>
+            </Border>
 
-            <TextBox Name="ModelEntry" 
-                 HorizontalAlignment="Left" 
-                 Text="Enter Model" 
-                 TextWrapping="Wrap" 
-                 VerticalAlignment="Top" 
-                 Width="126" 
-                 RenderTransformOrigin="0.5,0.5" 
-                 Margin="237,118,0,0" 
-                 Visibility="Hidden" 
-                 Grid.ColumnSpan="2"/>
-            <Button Name="AddDrone" 
-                Content="Add Drone" 
-                HorizontalAlignment="Left"  
-                VerticalAlignment="Top" Width="136" 
-                Click="AddDrone_Click" 
-                Height="20" Margin="232,237,0,0" 
-                FontFamily="Tw Cen MT" FontSize="12"
-                Visibility="Hidden" Grid.ColumnSpan="2"/>
-            <ComboBox Name="WeightSelection" HorizontalAlignment="Left" Margin="232,195,0,0" VerticalAlignment="Top" Width="136" Visibility="Hidden" Grid.ColumnSpan="2" />
-            <ComboBox Name="StationSelection" HorizontalAlignment="Left" VerticalAlignment="Top" Width="136" Margin="232,155,0,0" Visibility="Hidden" Grid.ColumnSpan="2"/>
-            <Button x:Name="Cancel" 
+            <Button Name="Cancel" 
                 Content="Cancel" 
                 HorizontalAlignment="Left"  
-                VerticalAlignment="Top" Width="60" Height="20" 
-                Click="Cancel_Click"  Margin="12,372,0,0" 
+                VerticalAlignment="Bottom" Width="60" Height="20" 
+                Click="Cancel_Click"  Margin="10,0,0,10" 
                 FontFamily="Tw Cen MT" FontSize="14" FontStretch="Expanded"
                 Background="{StaticResource ButtonBrush}"/>
-            <Image Source="/images/user.png" Margin="102,8,102,256"/>
+            <Image Source="/images/user.png" Margin="132,9,102,289"/>
+            <Border Grid.Column="0" Background="{StaticResource ButtonBrush}" CornerRadius="10" Width="200" Height="250" Margin="100,247,70,58">
+                <StackPanel VerticalAlignment="Top" Height="200" Width="150">
+                    <Label Name="IDBlock" Content="{Binding ID, Mode=TwoWay, StringFormat='Customer ID: {0}'}" Width="120" Height="26" Margin="0,20,0,0"/>
+                    <TextBox Name="NameBlock" Text="{Binding name, Mode=TwoWay}" Width="120" Margin="0,20,0,0"/>
+                    <TextBox Name="PhoneBlock" Text="{Binding phoneNumber, Mode=TwoWay}" Width="120" Margin="0,20,0,0"/>
+                    <Button Name="UpdateCustomerButton" Width="120" Background="{StaticResource AddButtonBrush}" Margin="0,20,0,0" Click="UpdateButton_Click" Visibility="Visible" Content="✓ Save Changes" FontFamily="Tw Cen MT" FontSize="10" Height="19"/>
+                </StackPanel>
+            </Border>
 
-            <StackPanel Grid.Column="0" VerticalAlignment="Center" Height="200" Width="150" Margin="0,0,0,-50">
-                <Label Name="IDBlock" Content="{Binding ID, Mode=TwoWay, StringFormat='Customer ID: {0}'}" Width="120" Height="26" Margin="0,20,0,0"/>
-                <TextBox Name="NameBlock" Text="{Binding name, Mode=TwoWay}" Width="120" Margin="0,20,0,0"/>
-                <TextBox Name="PhoneBlock" Text="{Binding phoneNumber, Mode=TwoWay}" Width="120" Margin="0,20,0,0"/>
-                <Button Name="UpdateCustomerButton" Width="120" Background="{StaticResource AddButtonBrush}" Margin="0,20,0,0" Click="UpdateButton_Click" Visibility="Visible" Content="✓ Save Changes" FontFamily="Tw Cen MT" FontSize="10" Height="19"/>
-            </StackPanel>
 
-
-            <ListView Name="SentPackageList" Grid.Column="1" HorizontalAlignment="Center" Height="150" Width="200" Margin="0,0,0,20" VerticalAlignment="Bottom" MouseDoubleClick="SentPackageList_MouseDoubleClick">
+            <ListView Name="SentPackageList" Grid.Column="1" HorizontalAlignment="Center" Height="219" Width="292" Margin="0,352,0,0" VerticalAlignment="Top" MouseDoubleClick="SentPackageList_MouseDoubleClick">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Package #" DisplayMemberBinding="{Binding Path=ID}"/>
@@ -66,7 +66,7 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            <ListView Name="ReceivedPackageList" Grid.Column="1"  HorizontalAlignment="Center" Height="150" Width="200" Margin="0,0,0,20" VerticalAlignment="Top" MouseDoubleClick="ReceivedPackageList_MouseDoubleClick">
+            <ListView Name="ReceivedPackageList" Grid.Column="1"  HorizontalAlignment="Center" Height="231" Width="292" Margin="0,58,0,0" VerticalAlignment="Top" MouseDoubleClick="ReceivedPackageList_MouseDoubleClick">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Package #" DisplayMemberBinding="{Binding Path=ID}"/>
@@ -76,9 +76,9 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            <TextBlock Grid.Column="1" HorizontalAlignment="Left" FontStyle="Italic" Text="Outgoing Packages" TextWrapping="Wrap" VerticalAlignment="Top" Width="136" Height="28" Margin="54,203,0,0"/>
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" FontStyle="Italic" Text="Outgoing Packages" TextWrapping="Wrap" VerticalAlignment="Top" Width="136" Height="28" Margin="54,320,0,0"/>
 
         </Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="354,39,0,0" FontStyle="Italic" Text="Incoming Packages" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" Height="24"/>
+        <TextBlock HorizontalAlignment="Left" Margin="459,25,0,0" FontStyle="Italic" Text="Incoming Packages" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" Height="24"/>
     </Grid>
 </Window>
