--- a/dotNet5782_0545_8228/PL/DroneWindow.xaml
+++ b/dotNet5782_0545_8228/PL/DroneWindow.xaml
@@ -1,43 +1,45 @@
-﻿<Window x:Class="PL.DroneWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PL"
-        mc:Ignorable="d"
-        Title="Drone Action Center" Height="450" Width="650">
+﻿
+<Window x:Class="PL.DroneWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:PL"
+    mc:Ignorable="d"
+    Title="Drone Action Center" Height="640" Width="800" WindowStartupLocation="CenterScreen">
     <Grid Background="{StaticResource WindowBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50*"/>
             <RowDefinition Height="300*"/>
         </Grid.RowDefinitions>
-        <TextBox Name="ModelEntry" 
-                 HorizontalAlignment="Left" 
-                 Text="Enter Model" 
-                 TextWrapping="Wrap" 
-                 VerticalAlignment="Top" 
-                 Width="126" 
-                 RenderTransformOrigin="0.5,0.5" 
-                 Margin="237,118,0,0" 
-                 Visibility="Hidden" 
-                 Grid.ColumnSpan="2">
+        <Border Name="AddGrid" Background="{StaticResource ButtonBrush}" CornerRadius="10" Grid.Row="1" Margin="228,108,227,29" Visibility="Hidden">
+            <Grid  >
+                <StackPanel >
+                    <TextBox Name="ModelEntry" 
+                            HorizontalAlignment="Center" 
+                            Text="Enter Model" 
+                            TextWrapping="Wrap" 
+                            VerticalAlignment="Center" 
+                            Width="150" 
+                            Margin="0,50,0,0" 
+                            Visibility="Visible"/>
+                    <ComboBox Name="WeightSelection" Width="150" Visibility="Visible" Margin="0,15,0,0"/>
+                    <ComboBox Name="StationSelection" Width="150" Visibility="Visible" Margin="0,15,0,0"/>
+                    <Button Name="AddDrone" 
+                            Content="＋ Add Drone" Width="136" 
+                            Click="AddDrone_Click" 
+                            Height="20" 
+                            FontFamily="Tw Cen MT" FontSize="12" Margin="0,25,0,0"
+                            Visibility="Visible" Background="{StaticResource AddButtonBrush}"/>
 
-        </TextBox>
-        <Button Name="AddDrone" 
-                Content="Add Drone" 
-                HorizontalAlignment="Left"  
-                VerticalAlignment="Top" Width="136" 
-                Click="AddDrone_Click" 
-                Height="20" Margin="232,237,0,0" 
-                FontFamily="Tw Cen MT" FontSize="12"
-                Visibility="Hidden" Grid.ColumnSpan="2"/>
-        <ComboBox Name="WeightSelection" HorizontalAlignment="Left" Margin="232,195,0,0" VerticalAlignment="Top" Width="136" Visibility="Hidden" Grid.ColumnSpan="2" />
-        <ComboBox Name="StationSelection" HorizontalAlignment="Left" VerticalAlignment="Top" Width="136" Margin="232,155,0,0" Visibility="Hidden" Grid.ColumnSpan="2"/>
-        <Button x:Name="Cancel" 
+                </StackPanel>
+            </Grid>
+        </Border>
+        <Button Name="Cancel" 
             Content="Cancel" 
             HorizontalAlignment="Left"  
-            VerticalAlignment="Top" Width="60" Height="20" 
-            Click="Cancel_Click"  Margin="10,342,0,0" 
+            VerticalAlignment="Bottom" Width="60" Height="20" 
+            Click="Cancel_Click"  Margin="10,0,0,10" 
             FontFamily="Tw Cen MT" FontSize="14" FontStretch="Expanded"
             Background="{StaticResource ButtonBrush}" Grid.Row="1"/>
 
@@ -45,14 +47,14 @@
         <Button Name="UpdateDroneButton"
                 Background="{StaticResource AddButtonBrush}" 
                 Click="ModelUpdateButton_Click" 
-                Visibility="Visible" 
+                Visibility="Hidden" 
                 Content="✓ Save Changes" 
                 FontFamily="Tw Cen MT"
                 FontSize="11"
                 VerticalAlignment="Top" HorizontalAlignment="Center" 
                 Margin="0,287,0,0" Width="166" Height="20"
-                Grid.Row="1"/>
-        <StackPanel Name="ButtonGrid" Margin="70,19,0,19" Visibility="Visible" Orientation="Horizontal" Width="550">
+                Grid.Row="1" />
+        <StackPanel Name="ButtonGrid" Margin="70,19,0,19" Visibility="Hidden" Orientation="Horizontal" Width="550">
             <Button Name="DeletePackage" Width="60" Margin="20,0,0,0" Background="{StaticResource CancelButtonBrush}" Click="DeletePackage_Click" Visibility="Visible" Content="✕ Delete Drone" Foreground="LightGray" FontFamily="Tw Cen MT" FontSize="9" />
             <Button Name="SendToChargeButton" Width="60" Background="{StaticResource ButtonBrush}" Visibility="Visible" Click="SendToChargeButton_Click" Margin="20,0,0,0">
                 <StackPanel Orientation="Horizontal">
@@ -65,23 +67,23 @@
             <Button Name="DeliverPackageButton" Width="60" Background="{StaticResource ButtonBrush}" Visibility="Visible" Content="Deliver Package"  FontFamily="Tw Cen MT" FontSize="9" Click="DeliverPackageButton_Click" Margin="20,0,0,0"/>
             <Button Name="ReleaseDroneFromChargeButton" Width="60" Background="{StaticResource ButtonBrush}" Visibility="Visible" Content="Charge Release" FontFamily="Tw Cen MT" FontSize="9" Click="ReleaseDroneFromChargeButton_Click" Margin="20,0,0,0"/>
         </StackPanel>
-        <TextBox Name="UpdateDroneModelText" Background="LightGray" HorizontalAlignment="Left" Margin="129,0,0,0" Text="{Binding Path=model}" TextWrapping="Wrap" Height="20" VerticalAlignment="Center" Width="166" Visibility="Visible" Grid.Row="1"/>
-        <Image Name="DroneImage" Source="images/dronenopackage.png"  Margin="260,62,260,269" Stretch="Fill" Visibility="Visible" Grid.RowSpan="2"/>
 
-        <TextBox Name="ChargingAmount" Visibility="Hidden" Grid.Column="1" HorizontalAlignment="Center" Margin="0,175,0,0" Text="Enter Hours Charging" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" ContentElement.MouseEnter="ChargingAmount_MouseEnter"/>
-        <Button Name="ChargingReleaseButton" Visibility="Hidden" Background="{StaticResource ButtonBrush}" Content="Release" Grid.Column="1" HorizontalAlignment="Center" Margin="0,216,0,0" VerticalAlignment="Top" Width="95" Click="ChargingReleaseButton_Click"/>
-        <TextBlock Name="IDBlock" Background="LightGray" Text="{Binding Path=ID, Mode=TwoWay}" HorizontalAlignment="Left" Margin="129,126,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="166" Height="19"/>
-        <TextBlock Name="WeightBlock" Background="LightGray" Text="{Binding Path=weightCategory, Mode=TwoWay}" HorizontalAlignment="Left" Grid.Row="1"  VerticalAlignment="Top" Width="166" Height="19" Margin="129,239,0,0"/>
-        <TextBlock Name="StatusBlock" Background="LightGray" Text="{Binding Path=status, Mode=TwoWay}" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Width="166" Margin="353,126,0,0" Height="19"/>
-        <TextBlock Name="BatteryBlock" Background="LightGray" Text="{Binding Path=battery, Mode=TwoWay}" HorizontalAlignment="Left" Grid.Row="1"   VerticalAlignment="Center" Margin="353,0,0,0" Width="166" Height="19"/>
-        <Label Name="LocationBlock" Background="LightGray" Content="{Binding Path=location, Mode=TwoWay}" HorizontalAlignment="Left" Grid.Row="1"  VerticalAlignment="Top" Margin="353,215,0,0" Width="166" Height="45"/>
-        <TextBlock Text="Drone ID" FontStyle="Italic" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="129,105,0,0" Grid.Row="1" />
-        <TextBlock Text="Weight Class" FontStyle="Italic" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="129,217,0,0" Grid.Row="1" />
-        <TextBlock Text="Current Status" FontStyle="Italic" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="353,108,0,0" Grid.Row="1" />
-        <TextBlock Text="Location" FontStyle="Italic" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="353,196,0,0" Grid.Row="1" />
-        <TextBlock Text="Drone Model" FontStyle="Italic" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="129,153,0,0" Grid.Row="1" />
-        <TextBlock Text="Battery Level" FontStyle="Italic" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="353,155,0,0" Grid.Row="1" />
+        <Image Name="DroneImage" Source="images/dronenopackage.png"  Margin="313,63,313,372" Visibility="Visible" Grid.RowSpan="2"/>
 
+        <Grid Name="TextEntries" Grid.Row="1" Visibility="Hidden">
+            <TextBox Name="UpdateDroneModelText" Background="LightGray" HorizontalAlignment="Left" Margin="129,184,0,0" Text="{Binding Path=model}" TextWrapping="Wrap" Height="20" VerticalAlignment="Top" Width="166" Visibility="Visible" Grid.Row="1"/>
+            <TextBlock Name="IDBlock" Background="LightGray" Text="{Binding Path=ID, Mode=TwoWay}" HorizontalAlignment="Left" Margin="129,126,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="166" Height="19"/>
+            <TextBlock Name="WeightBlock" Background="LightGray" Text="{Binding Path=weightCategory, Mode=TwoWay}" HorizontalAlignment="Left" Grid.Row="1"  VerticalAlignment="Top" Width="166" Height="19" Margin="129,239,0,0"/>
+            <TextBlock Name="StatusBlock" Background="LightGray" Text="{Binding Path=status, Mode=TwoWay}" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Width="166" Margin="353,126,0,0" Height="19"/>
+            <TextBlock Name="BatteryBlock" Background="LightGray" Text="{Binding Path=battery, Mode=TwoWay}" HorizontalAlignment="Left" Grid.Row="1"   VerticalAlignment="Center" Margin="353,0,0,0" Width="166" Height="19"/>
+            <Label Name="LocationBlock" Background="LightGray" Content="{Binding Path=location, Mode=TwoWay}" HorizontalAlignment="Left" Grid.Row="1"  VerticalAlignment="Top" Margin="353,215,0,0" Width="166" Height="45"/>
+            <TextBlock Text="Drone ID" FontStyle="Italic" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="129,105,0,0" Grid.Row="1" />
+            <TextBlock Text="Weight Class" FontStyle="Italic" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="129,217,0,0" Grid.Row="1" />
+            <TextBlock Text="Current Status" FontStyle="Italic" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="353,108,0,0" Grid.Row="1" />
+            <TextBlock Text="Location" FontStyle="Italic" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="353,196,0,0" Grid.Row="1" />
+            <TextBlock Text="Drone Model" FontStyle="Italic" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="129,157,0,0" Grid.Row="1" />
+            <TextBlock Text="Battery Level" FontStyle="Italic" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="353,152,0,0" Grid.Row="1" />
+        </Grid>
 
 
     </Grid>
