--- a/dotNet5782_0545_8228/PL/PackageViewWindow.xaml
+++ b/dotNet5782_0545_8228/PL/PackageViewWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="PackageViewWindow" Height="450" Width="600">
+        Title="PackageViewWindow" Height="640" Width="800" WindowStartupLocation="CenterScreen">
     <Grid Background="{StaticResource WindowBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50*"/>
@@ -31,28 +31,31 @@
             <Button x:Name="Cancel" 
                 Content="Cancel" 
                 HorizontalAlignment="Left"  
-                VerticalAlignment="Top" Width="60" Height="20" 
-                Click="Cancel_Click"  Margin="10,342,0,0" 
+                VerticalAlignment="Bottom" Width="60" Height="20" 
+                Click="Cancel_Click"  Margin="10,0,0,10" 
                 FontFamily="Tw Cen MT" FontSize="14" FontStretch="Expanded"
                 Background="{StaticResource ButtonBrush}" Grid.Row="1"/>
-            <Image Source="/images/box.png" Margin="102,8,102,256"/>
-            <Image Source="/images/drone-package.png" Margin="95,6,95,246" Grid.Column="1"/>
+            <Image Source="/images/box.png" Margin="162,6,114,332"/>
+            <Button Name="ViewDrone" Margin="118,47,158,369" Grid.Column="1" Background="{StaticResource AddButtonBrush}" Click="ViewDrone_Click">
+                <Image Source="/images/drone-package.png"/>
+            </Button>
 
-            <StackPanel Name="PackagePanel" Grid.Column="0" VerticalAlignment="Top" Height="200" Width="150" Margin="75,121,75,0">
-                <TextBlock Name="IDBlock" Text="{Binding ID, Mode=TwoWay, StringFormat='ID: {0}'}" Width="120" Height="15" Margin="0,10,0,0" Background="LightGray"/>
-                <TextBlock Name="SenderBlock" Text="{Binding senderName, Mode=TwoWay}" Width="120" Margin="0,10,0,0"  Background="LightGray" Height="14"/>
-                <TextBlock Name="ReceiverBlock" Text="{Binding receiverName, Mode=TwoWay}" Width="120" Margin="0,10,0,0" Background="LightGray" Height="14"/>
-                <TextBlock Name="Status" Text="{Binding status, Mode=TwoWay}" Width="120" Margin="0,10,0,0"  Background="LightGray" Height="15"/>
-                <TextBlock Name="WeightBlock" Text="{Binding weightCategory, Mode=TwoWay}" Width="120" Margin="0,10,0,0"  Background="LightGray" Height="15"/>
-                <TextBlock Name="PriorityBlock" Text="{Binding priority, Mode=TwoWay}" Width="120" Margin="0,10,0,0"  Background="LightGray" Height="15"/>
-                <Button Name="DeletePackageButton" Width="120" Margin="0,20,0,0" Background="{StaticResource CancelButtonBrush}" Click="DeletePackageButton_Click"  Visibility="Visible" Content="✕ Delete Package" FontFamily="Tw Cen MT" Foreground="LightGray" FontSize="10" Height="19"/>
+
+            <StackPanel Name="PackagePanel" Grid.Column="0" VerticalAlignment="Top" Height="277" Margin="100,195,52,0">
+                <TextBlock Name="IDBlock" Text="{Binding ID, Mode=TwoWay, StringFormat='ID: {0}'}" Width="150" Height="25" Margin="0,10,0,0" Background="LightGray"/>
+                <TextBlock Name="SenderBlock" Text="{Binding senderName, Mode=TwoWay}" Width="150" Margin="0,10,0,0"  Background="LightGray" Height="25"/>
+                <TextBlock Name="ReceiverBlock" Text="{Binding receiverName, Mode=TwoWay}" Width="150" Margin="0,10,0,0" Background="LightGray" Height="25"/>
+                <TextBlock Name="Status" Text="{Binding status, Mode=TwoWay}" Width="150" Margin="0,10,0,0"  Background="LightGray" Height="25"/>
+                <TextBlock Name="WeightBlock" Text="{Binding weightCategory, Mode=TwoWay}" Width="150" Margin="0,10,0,0"  Background="LightGray" Height="25"/>
+                <TextBlock Name="PriorityBlock" Text="{Binding priority, Mode=TwoWay}" Width="150" Margin="0,10,0,0"  Background="LightGray" Height="25"/>
+                <Button Name="DeletePackageButton" Width="120" Margin="0,20,0,0" Background="{StaticResource CancelButtonBrush}" Click="DeletePackageButton_Click"  Visibility="Visible" Content="✕ Delete Package" FontFamily="Tw Cen MT" Foreground="LightGray" FontSize="10" Height="20"/>
             </StackPanel>
 
-            <StackPanel Name="DronePanel" Grid.Column="1" VerticalAlignment="Top" Height="200" Width="150" Margin="75,147,75,0">
-                <TextBlock Name="DroneIDBlock" FontSize="9" Foreground="Gray" Text="{Binding ID, Mode=TwoWay, FallbackValue='No Content Available', StringFormat='ID: {0}'}" Width="120" Height="20" Margin="0,10,0,0" Background="LightGray"/>
-                <TextBlock Name="DroneWeightBlock" FontSize="9" Foreground="Gray" Text="{Binding weightCategory, FallbackValue='No Content Available', Mode=TwoWay}" Width="120" Margin="0,10,0,0"  Background="LightGray" Height="20"/>
-                <Label Name="DroneLocationBlock" FontSize="9" Foreground="Gray" Content="{Binding location, FallbackValue='No Content Available', Mode=TwoWay}" Width="120" Margin="0,10,0,0" Background="LightGray" Height="20"/>
-                <TextBlock Name="DroneStatusBlock" FontSize="9" Foreground="Gray" Text="{Binding status, FallbackValue='No Content Available', Mode=TwoWay}" Width="120" Margin="0,10,0,0"  Background="LightGray" Height="20"/>
+            <StackPanel Name="DronePanel" Grid.Column="1" VerticalAlignment="Top" Height="200" Margin="92,206,132,0">
+                <TextBlock Name="DroneIDBlock" FontSize="10" Foreground="Gray" Text="{Binding ID, Mode=TwoWay, FallbackValue='No Content Available', StringFormat='ID: {0}'}" Width="150" Height="20" Margin="0,10,0,0" Background="LightGray"/>
+                <TextBlock Name="DroneWeightBlock" FontSize="10" Foreground="Gray" Text="{Binding weightCategory, FallbackValue='No Content Available', Mode=TwoWay}" Width="150" Margin="0,10,0,0"  Background="LightGray" Height="20"/>
+                <TextBlock Name="DroneLocationBlock" FontSize="10" Foreground="Gray" Text="{Binding location, FallbackValue='No Content Available', Mode=TwoWay}" Width="150" Margin="0,10,0,0" Background="LightGray" Height="40"/>
+                <TextBlock Name="DroneStatusBlock" FontSize="10" Foreground="Gray" Text="{Binding status, FallbackValue='No Content Available', Mode=TwoWay}" Width="150" Margin="0,10,0,0"  Background="LightGray" Height="20"/>
             </StackPanel>
 
 
