--- a/dotNet5782_0545_8228/PL/ListWindow.xaml
+++ b/dotNet5782_0545_8228/PL/ListWindow.xaml
@@ -68,10 +68,10 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions >
-                        <Button Name="ClearFilterButton2" Content="Clear Filters" FontSize="18" FontFamily="Tw Cen MT"  Grid.Column="0" Background="{StaticResource ButtonBrush}" Click="ClearFilterButton_Click"/>
-                        <ComboBox Name="PackageStatusSelector" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneStatusSelector_SelectionChanged" Grid.Column="1" />
-                        <Button Name="AddPackageeButton" Content="+ Add Package" Background="{StaticResource AddButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
-                        <ComboBox Name="PackageWeightSelector" Grid.Column="2" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneWeightSelector_SelectionChanged"/>
+                        <Button Content="Clear Filters" FontSize="18" FontFamily="Tw Cen MT"  Grid.Column="0" Background="{StaticResource ButtonBrush}" Click="ClearFilterButton_Click"/>
+                        <ComboBox Name="PackagePrioritySelector" Background="{StaticResource ButtonBrush}" SelectionChanged="PackagePrioritySelector_SelectionChanged"  Grid.Column="1" />
+                        <Button Name="AddPackageButton" Content="+ Add Package" Background="{StaticResource AddButtonBrush}" Grid.Column="3" Click="AddPackageButton_Click"  FontSize="18" FontFamily="Tw Cen MT" />
+                        <ComboBox Name="PackageWeightSelector" Grid.Column="2" Background="{StaticResource ButtonBrush}" SelectionChanged="PackageWeightSelector_SelectionChanged"/>
 
                     </Grid>
 
@@ -144,7 +144,7 @@
 
                             <Button Name="ClearFilterButton4" Content="Clear Filters" FontSize="18" FontFamily="Tw Cen MT"  Grid.Column="0" Background="{StaticResource ButtonBrush}" Click="ClearFilterButton_Click"/>
                             <ComboBox Name="CustomerStatusSelector" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneStatusSelector_SelectionChanged" Grid.Column="1" />
-                            <Button Name="AddCustomerButton" Content="+ Add Customer" Background="{StaticResource AddButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
+                            <Button Name="AddCustomerButton" Content="+ Add Customer" Background="{StaticResource AddButtonBrush}" Grid.Column="3" Click="AddCustomerButton_Click"  FontSize="18" FontFamily="Tw Cen MT" />
                             <ComboBox Name="CustomerWeightSelector" Grid.Column="2" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneWeightSelector_SelectionChanged"/>
                         </Grid>
                         <ListView Foreground="LightGray" Name="CustomerListView" ItemsSource="{Binding}" Grid.Row="1" Background="{StaticResource WindowBrush}" MouseDoubleClick="CustomerListView_MouseDoubleClick"  >
