--- a/dotNet5782_0545_8228/PL/PackageViewWindow.xaml
+++ b/dotNet5782_0545_8228/PL/PackageViewWindow.xaml
@@ -38,7 +38,7 @@
             </Border>
 
             <Image Name="PackageInfoImage" Visibility="Hidden" Source="/images/box.png" Margin="162,6,114,332"/>
-            <Button Name="ViewDrone" Visibility="Hidden" Margin="118,47,158,369" Grid.Column="1" Background="{StaticResource AddButtonBrush}" Click="ViewDrone_Click">
+            <Button Name="ViewDrone" Visibility="Hidden" VerticalAlignment="Top" HorizontalAlignment="Center" Width="150" Margin="0,47,0,0" Grid.Column="1" Background="{StaticResource AddButtonBrush}" Click="ViewDrone_Click">
                 <Image Source="/images/drone-package.png"/>
             </Button>
             <Button Name="Cancel" 
@@ -60,7 +60,7 @@
                 <Button Name="DeletePackageButton" Width="120" Margin="0,20,0,0" Background="{StaticResource CancelButtonBrush}" Click="DeletePackageButton_Click"  Visibility="Visible" Content="✕ Delete Package" FontFamily="Tw Cen MT" Foreground="LightGray" FontSize="10" Height="20"/>
             </StackPanel>
 
-            <StackPanel Name="DronePanel" Visibility="Hidden" Grid.Column="1" VerticalAlignment="Top" Height="200" Margin="92,206,132,0">
+            <StackPanel Name="DronePanel" Visibility="Hidden" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Center" Height="200" Margin="0,250,0,0">
                 <TextBlock Name="DroneIDBlock" FontSize="10" Foreground="Gray" Text="{Binding ID, Mode=TwoWay, FallbackValue='No Content Available', StringFormat='ID: {0}'}" Width="150" Height="20" Margin="0,10,0,0" Background="LightGray"/>
                 <TextBlock Name="DroneWeightBlock" FontSize="10" Foreground="Gray" Text="{Binding weightCategory, FallbackValue='No Content Available', Mode=TwoWay}" Width="150" Margin="0,10,0,0"  Background="LightGray" Height="20"/>
                 <TextBlock Name="DroneLocationBlock" FontSize="10" Foreground="Gray" Text="{Binding location, FallbackValue='No Content Available', Mode=TwoWay}" Width="150" Margin="0,10,0,0" Background="LightGray" Height="40"/>
